<resources>

    <string name="app_name">Paint</string>
    <string name="edit_message">Enter a message!</string>
    <string name="button_send">Send</string>
    <string name="open_button">Paint</string>
    <string name="save_button">Save</string>
    <string name="new_button">New</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_undo">Undo</string>
    <string name="menu_redo">Redo</string>
    <color name="white">#FFFFFF</color>
    
    <string name="title_activity_main">Paint</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_activity_open_gl">OpenGL</string>
    <string name="title_activity_canvas">CanvasActivity</string>
    <string name="brush_size">Brush Size:&#160;</string>
    <string name="brush_start">5px</string>
    <string name="brush_default">30px</string>
    <string name="brush_end">150px</string>
    <string name="radio1">Circle</string>
	<string name="radio2">Square</string>
	<string name="radio3">Spray</string>
	<string name="radio4">Fill</string>
	<string name="brushStyle">Brush Style:</string>
	<string name="brushColor">Brush Color:&#160;&#160;&#160;</string>
	<string name="zero">0</string>
	<string name="twofiftyfive">255</string>
    <string name="red">R&#160;&#160;&#160;</string>
    <string name="green">G&#160;&#160;&#160;</string>
    <string name="blue">B&#160;&#160;&#160;</string>
     <string name="blank">&#160;&#160;&#160;&#160;&#160;&#160;</string>
     <string name="camera_button">Camera</string>
     <string name="album_name">Photos</string>
    
    
</resources>