<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="left"
    android:orientation="vertical" >
    


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/size_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brush_size"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brush_default"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <!--
     <EditText android:id="@+id/edit_message"
        android:layout_weight = "1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
		android:hint="@string/edit_message" />
    
     <Button
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/button_send"
    	android:onClick="sendMessage" />
        -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brush_start"
            android:textSize="20dp" />

        <SeekBar
            android:id="@+id/seekbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="145"
            android:minWidth="200dp"
            android:progress="25" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brush_end"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="30dp" >
        </View>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brushStyle"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radiobutton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/radio1"
                android:textSize="15dp" >
            </RadioButton>

            <RadioButton
                android:id="@+id/radiobutton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio2"
                android:textSize="15dp" >
            </RadioButton>

            <RadioButton
                android:id="@+id/radiobutton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio3"
                android:textSize="15dp" >
            </RadioButton>
            
            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio4"
                android:textSize="15dp" >
            </RadioButton>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >


        <View
            android:layout_width="fill_parent"
            android:layout_height="30dp" >
        </View>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brushColor"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/colorSquare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FF0000"
            android:text="@string/blank"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/red"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/redValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twofiftyfive"
            android:textSize="20dp" />

        <SeekBar
            android:id="@+id/redseek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:max="255"
            android:minWidth="255dp"
            android:progress="255" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/green"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/greenValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textSize="20dp" />

        <SeekBar
            android:id="@+id/greenseek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:max="255"
            android:minWidth="255dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blue"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/blueValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textSize="20dp" />

        <SeekBar
            android:id="@+id/blueseek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:max="255"
            android:minWidth="255dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="30dp" >
        </View>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="openGl"
            android:text="@string/new_button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="openGl"
            android:text="@string/open_button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="saveImage"
            android:text="@string/save_button" />
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Picture"
            android:text="@string/camera_button" />
    </LinearLayout>
<!--
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/hello_world"
        tools:context=".MainActivity" />
    -->

    

</LinearLayout>